bk_ida/gccida/g1/assign_temp
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_temp/src/function.c:1325:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_temp/src/function.c:1327:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_temp/src/function.c:1331:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_temp/src/function.c:1386:28: error: use of undeclared identifier 'machine_mode'
v9 = promote_mode( type, ( machine_mode)v8, unsignedp, 0); 
                           ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_temp/src/obj/function.o] Error 1
